--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             51     73.91%
-				kind-of updated:     5       7.25%
+				updated:             54     78.26%
+				kind-of updated:     4       5.80%
 				kind-of outdated:    1       1.45%
-				outdated:            11     15.94%
+				outdated:            9      13.04%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:74%"></div>
-			<div class="kindof-updated" style="width:7%"></div>
+			<div class="updated" style="width:78%"></div>
+			<div class="kindof-updated" style="width:6%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:16%"></div>
+			<div class="outdated" style="width:13%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -461,7 +461,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -774,7 +774,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
@@ -959,7 +959,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
