--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             54     78.26%
-				kind-of updated:     4       5.80%
-				kind-of outdated:    1       1.45%
-				outdated:            9      13.04%
+				updated:             15     21.74%
+				kind-of updated:     36     52.17%
+				kind-of outdated:    7      10.14%
+				outdated:            10     14.49%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:78%"></div>
-			<div class="kindof-updated" style="width:6%"></div>
-			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:13%"></div>
+			<div class="updated" style="width:22%"></div>
+			<div class="kindof-updated" style="width:52%"></div>
+			<div class="kindof-outdated" style="width:10%"></div>
+			<div class="outdated" style="width:14.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -235,7 +235,7 @@
 				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-extra">
@@ -249,7 +249,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -263,7 +263,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -277,7 +277,7 @@
 				<p>Implements the OptiFine shader format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-dynamic-lights">
@@ -305,7 +305,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -319,7 +319,7 @@
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="animatica">
@@ -347,7 +347,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -361,7 +361,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -375,7 +375,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="nuit">
@@ -418,7 +418,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -448,7 +448,7 @@
 				<p>Optimization mod that focuses on things other than rendering.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="distant-horizons">
@@ -462,7 +462,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -490,7 +490,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="fast-ip-ping">
@@ -504,7 +504,7 @@
 				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -518,7 +518,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -532,7 +532,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -546,7 +546,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -560,7 +560,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
@@ -574,7 +574,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
@@ -603,7 +603,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -619,7 +619,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="model-gap-fix">
@@ -633,7 +633,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="modernfix">
@@ -661,7 +661,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
@@ -677,7 +677,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -705,7 +705,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
@@ -719,7 +719,7 @@
 				<p>Adds sounds for drip particles landing.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -733,7 +733,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -747,7 +747,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="particular">
@@ -775,7 +775,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
@@ -804,7 +804,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="sounds">
@@ -832,7 +832,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -860,7 +860,7 @@
 				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -874,7 +874,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -904,7 +904,7 @@
 				<p>Shows information about what you are looking at.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="litematica">
@@ -918,7 +918,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -932,7 +932,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -946,7 +946,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
@@ -960,7 +960,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
@@ -974,7 +974,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -990,7 +990,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
@@ -1018,7 +1018,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1032,7 +1032,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-patches">
@@ -1046,7 +1046,7 @@
 				<p>Touches up a few aspects of the mundane chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="cherished-worlds">
@@ -1060,7 +1060,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
@@ -1074,7 +1074,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
@@ -1088,7 +1088,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1104,7 +1104,7 @@
 				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1118,7 +1118,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-language-kotlin">
@@ -1132,7 +1132,7 @@
 				<p>Required by <a href="#optigui">OptiGUI</a> and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
@@ -1146,7 +1146,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="mru">
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
@@ -1174,7 +1174,7 @@
 				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="tcdcommons-api">
@@ -1188,7 +1188,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
@@ -1202,7 +1202,7 @@
 				<p>Required by <a href="@chat-patches">Chat Patches</a>, <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 	</body>
