--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             15     21.74%
-				kind-of updated:     36     52.17%
+				updated:             16     23.19%
+				kind-of updated:     35     50.72%
 				kind-of outdated:    7      10.14%
 				outdated:            10     14.49%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:22%"></div>
-			<div class="kindof-updated" style="width:52%"></div>
+			<div class="updated" style="width:23%"></div>
+			<div class="kindof-updated" style="width:51%"></div>
 			<div class="kindof-outdated" style="width:10%"></div>
 			<div class="outdated" style="width:14.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -691,7 +691,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="blur-plus">
