--- a/mods.html
+++ b/mods.html
@@ -201,17 +201,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             16     23.19%
-				kind-of updated:     35     50.72%
-				kind-of outdated:    7      10.14%
+				updated:             22     31.88%
+				kind-of updated:     30     43.48%
+				kind-of outdated:    6       8.70%
 				outdated:            10     14.49%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:23%"></div>
-			<div class="kindof-updated" style="width:51%"></div>
-			<div class="kindof-outdated" style="width:10%"></div>
+			<div class="updated" style="width:32%"></div>
+			<div class="kindof-updated" style="width:43.5%"></div>
+			<div class="kindof-outdated" style="width:9%"></div>
 			<div class="outdated" style="width:14.5%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -319,7 +319,7 @@
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="animatica">
@@ -532,7 +532,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -619,7 +619,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="model-gap-fix">
@@ -946,7 +946,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
@@ -1174,7 +1174,7 @@
 				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="tcdcommons-api">
@@ -1202,7 +1202,7 @@
 				<p>Required by <a href="@chat-patches">Chat Patches</a>, <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 	</body>
