--- a/mods.html
+++ b/mods.html
@@ -201,17 +201,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             22     31.88%
-				kind-of updated:     30     43.48%
-				kind-of outdated:    6       8.70%
+				updated:             32     46.38%
+				kind-of updated:     23     33.33%
+				kind-of outdated:    3       4.35%
 				outdated:            10     14.49%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:32%"></div>
-			<div class="kindof-updated" style="width:43.5%"></div>
-			<div class="kindof-outdated" style="width:9%"></div>
+			<div class="updated" style="width:46.5%"></div>
+			<div class="kindof-updated" style="width:33%"></div>
+			<div class="kindof-outdated" style="width:4.5%"></div>
 			<div class="outdated" style="width:14.5%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -249,7 +249,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -263,7 +263,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -361,7 +361,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -375,7 +375,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="nuit">
@@ -719,7 +719,7 @@
 				<p>Adds sounds for drip particles landing.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -904,7 +904,7 @@
 				<p>Shows information about what you are looking at.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="litematica">
@@ -918,7 +918,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -932,7 +932,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -1032,7 +1032,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-patches">
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
