--- a/mods.html
+++ b/mods.html
@@ -203,14 +203,14 @@
 				total mods:          69    100.00%
 				updated:             32     46.38%
 				kind-of updated:     23     33.33%
-				kind-of outdated:    3       4.35%
-				outdated:            10     14.49%
+				kind-of outdated:    4       5.80%
+				outdated:            9      13.04%
 				abandoned:           1       1.45%
 			-->
 			<div class="updated" style="width:46.5%"></div>
 			<div class="kindof-updated" style="width:33%"></div>
-			<div class="kindof-outdated" style="width:4.5%"></div>
-			<div class="outdated" style="width:14.5%"></div>
+			<div class="kindof-outdated" style="width:6%"></div>
+			<div class="outdated" style="width:13%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -603,7 +603,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -1146,7 +1146,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="mru">
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.8</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
