--- a/mods.html
+++ b/mods.html
@@ -201,15 +201,15 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             32     46.38%
-				kind-of updated:     23     33.33%
-				kind-of outdated:    4       5.80%
+				updated:             38     55.07%
+				kind-of updated:     18     26.09%
+				kind-of outdated:    3       4.35%
 				outdated:            9      13.04%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:46.5%"></div>
-			<div class="kindof-updated" style="width:33%"></div>
-			<div class="kindof-outdated" style="width:6%"></div>
+			<div class="updated" style="width:55%"></div>
+			<div class="kindof-updated" style="width:26%"></div>
+			<div class="kindof-outdated" style="width:4.5%"></div>
 			<div class="outdated" style="width:13%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
@@ -347,7 +347,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -448,7 +448,7 @@
 				<p>Optimization mod that focuses on things other than rendering.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="distant-horizons">
@@ -603,7 +603,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -705,7 +705,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
@@ -1018,7 +1018,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1188,7 +1188,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
