--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             38     55.07%
-				kind-of updated:     18     26.09%
+				updated:             42     60.87%
+				kind-of updated:     14     20.29%
 				kind-of outdated:    3       4.35%
 				outdated:            9      13.04%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:55%"></div>
-			<div class="kindof-updated" style="width:26%"></div>
+			<div class="updated" style="width:61%"></div>
+			<div class="kindof-updated" style="width:20%"></div>
 			<div class="kindof-outdated" style="width:4.5%"></div>
 			<div class="outdated" style="width:13%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -305,7 +305,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -462,7 +462,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -518,7 +518,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -1088,7 +1088,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
