--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             42     60.87%
-				kind-of updated:     14     20.29%
+				updated:             45     65.22%
+				kind-of updated:     12     17.39%
 				kind-of outdated:    3       4.35%
-				outdated:            9      13.04%
+				outdated:            8      11.59%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:61%"></div>
-			<div class="kindof-updated" style="width:20%"></div>
+			<div class="updated" style="width:65%"></div>
+			<div class="kindof-updated" style="width:17.5%"></div>
 			<div class="kindof-outdated" style="width:4.5%"></div>
-			<div class="outdated" style="width:13%"></div>
+			<div class="outdated" style="width:11.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -418,7 +418,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -633,7 +633,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="modernfix">
@@ -790,7 +790,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
