--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             45     65.22%
-				kind-of updated:     12     17.39%
-				kind-of outdated:    3       4.35%
-				outdated:            8      11.59%
+				updated:             52     75.36%
+				kind-of updated:     7      10.14%
+				kind-of outdated:    2       2.90%
+				outdated:            7      10.14%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:65%"></div>
-			<div class="kindof-updated" style="width:17.5%"></div>
-			<div class="kindof-outdated" style="width:4.5%"></div>
-			<div class="outdated" style="width:11.5%"></div>
+			<div class="updated" style="width:75.5%"></div>
+			<div class="kindof-updated" style="width:10%"></div>
+			<div class="kindof-outdated" style="width:3%"></div>
+			<div class="outdated" style="width:10%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -818,7 +818,7 @@
 				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="status-effect-bars">
@@ -832,7 +832,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -974,7 +974,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -1046,7 +1046,7 @@
 				<p>Touches up a few aspects of the mundane chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="cherished-worlds">
@@ -1074,7 +1074,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
@@ -1104,7 +1104,7 @@
 				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
