--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             52     75.36%
-				kind-of updated:     7      10.14%
+				updated:             53     76.81%
+				kind-of updated:     6       8.70%
 				kind-of outdated:    2       2.90%
 				outdated:            7      10.14%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:75.5%"></div>
-			<div class="kindof-updated" style="width:10%"></div>
+			<div class="updated" style="width:77%"></div>
+			<div class="kindof-updated" style="width:8.5%"></div>
 			<div class="kindof-outdated" style="width:3%"></div>
 			<div class="outdated" style="width:10%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -1004,7 +1004,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="better-statistics-screen">
