--- a/mods.html
+++ b/mods.html
@@ -1060,7 +1060,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
