--- a/mods.html
+++ b/mods.html
@@ -201,15 +201,15 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             54     78.26%
+				updated:             55     79.71%
 				kind-of updated:     5       7.25%
-				kind-of outdated:    2       2.90%
+				kind-of outdated:    1       1.45%
 				outdated:            7      10.14%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:78.5%"></div>
+			<div class="updated" style="width:80%"></div>
 			<div class="kindof-updated" style="width:7%"></div>
-			<div class="kindof-outdated" style="width:3%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:10%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
@@ -890,7 +890,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
