--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             55     79.71%
-				kind-of updated:     5       7.25%
+				updated:             56     81.16%
+				kind-of updated:     4       5.80%
 				kind-of outdated:    1       1.45%
 				outdated:            7      10.14%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:80%"></div>
-			<div class="kindof-updated" style="width:7%"></div>
+			<div class="updated" style="width:81%"></div>
+			<div class="kindof-updated" style="width:6%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:10%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -990,7 +990,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
