--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             56     81.16%
-				kind-of updated:     4       5.80%
+				updated:             57     82.61%
+				kind-of updated:     3       4.35%
 				kind-of outdated:    1       1.45%
 				outdated:            7      10.14%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:81%"></div>
-			<div class="kindof-updated" style="width:6%"></div>
+			<div class="updated" style="width:82.5%"></div>
+			<div class="kindof-updated" style="width:4.5%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:10%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -960,7 +960,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
